--- a/templates/user.html
+++ b/templates/user.html
@@ -12,4 +12,7 @@
     <input type="email" name="email" placeholder="Enter Email" value="{{email if email}}"/>
     <input type="submit" value="submit"/>
 </form>
+<a class="btn btn-primary" href="{{ url_for('static', filename='Lemonade test.m4a')}}" role="button">Download Sound</a>
+<a class="btn btn-primary" onmousedown="lemonade.play();" >Play Sound</a>
+
 {% endblock %}
